k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradle-app-service
  namespace: s3
spec:
  type: NodePort
  selector:
    app: gradle-app
  ports:
    - port: 8081
      targetPort: 8081
