k8s/ingressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gradle-app-gateway
  namespace: s3
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "cryptography.example.com"  # replace with your actual hostname
    port:
      number: 80
      name: http
      protocol: HTTP
